main menu offset fix. uk-offcanvas z-index fix.

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -241,6 +241,8 @@
 @offcanvas-bar-background:                      @global-background;
 @offcanvas-card-header-height:                  60px;
 
+.uk-offcanvas { z-index: 1006; }
+
 .uk-offcanvas-bar .uk-card-header {
   min-height: @offcanvas-card-header-height;
   padding-top: 0;
